--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
         </div>
 
         <div class="resume-buttons">
-            <a href="C:\Users\Syed Ayesha\OneDrive\Documents\resumes and docs\ayisha resume updated.pdf" class="btn"
+            <a href="https://zainaresume.tiiny.site" class="btn"
                 target="_blank">View Resume</a>
-            <a href="C:\Users\Syed Ayesha\OneDrive\Documents\resumes and docs\ayisha resume updated.pdf" class="btn"
+            <a href="https://zainaresume.tiiny.site" class="btn"
                 download="Syed_Aayisha_Resume.pdf">Download Resume</a>
         </div>
     </section>
