--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
         </div>
 
         <div class="resume-buttons">
-            <a href="https://zainaresume.tiiny.site" class="btn"
+            <a href="https://syedayisha.tiiny.site" class="btn"
                 target="_blank">View Resume</a>
-            <a href="https://zainaresume.tiiny.site" class="btn"
+            <a href="https://syedayisha.tiiny.site" class="btn"
                 download="Syed_Aayisha_Resume.pdf">Download Resume</a>
         </div>
     </section>
 
     <div class="contact-icons">
-        <a href="mailto:your.email@example.com" target="_blank">
+        <a href="mailto:aayishasyed730@gmail.com" target="_blank">
             <img src="https://img.icons8.com/material-outlined/48/000000/email.png" alt="Email Icon">
         </a>
         <a href="https://github.com/192121089" target="_blank">
